Wrap add button in a div

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <main class="container">
         <h1 class="caption">Leaderboard</h1>
         <section class="scores-section">
-            <div>
+            <div class="score-container">
                 <div class="score-caption">
                     <h2>Recent scores</h2>
                     <button class="btn refresh-btn" type="button">Refresh</button>
@@ -29,7 +29,9 @@
                 <h2 class="form-caption">Add your score</h2>
                 <input type="text" name="add-name" id="add-name" placeholder="Your name">
                 <input type="text" name="add-score" id="add-score" placeholder="Your score">
-                <button class="btn add-btn" type="submit">Submit</button>
+                <div class="btn-container">
+                    <button class="btn add-btn" type="submit">Submit</button>
+                </div>
             </form>
         </section>
     </main>
