Change input type on #add-score to number

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
             <form class="form">
                 <h2 class="form-caption">Add your score</h2>
                 <input type="text" name="add-name" id="add-name" placeholder="Your name">
-                <input type="text" name="add-score" id="add-score" placeholder="Your score">
+                <input type="number" name="add-score" id="add-score" placeholder="Your score">
                 <div class="btn-container">
                     <button class="btn add-btn" type="submit">Submit</button>
                 </div>
