Make input fields required

--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,8 @@
 
             <form class="form">
                 <h2 class="form-caption">Add your score</h2>
-                <input type="text" name="add-name" id="add-name" placeholder="Your name">
-                <input type="number" name="add-score" id="add-score" placeholder="Your score">
+                <input type="text" name="add-name" id="add-name" placeholder="Your name" required>
+                <input type="number" name="add-score" id="add-score" placeholder="Your score" required>
                 <div class="btn-container">
                     <button class="btn add-btn" type="submit">Submit</button>
                 </div>
